   psemu_plugin_defs.h from libpcsxcore.
 * macosx/plugins/HIDInput/src/PlugPAD.c: Likewise.
 * macosx/plugins/CDDeviceInterface/CDDeviceInterfacePlugin.xcodeproj/
   project.pbxproj: Likewise.
 * macosx/plugins/CDDeviceInterface/src/PlugCD.c: Likewise.
 * macosx/plugins/HIDInput/src/PSEmu_Plugin_Defs.h: Removed.
 * macosx/plugins/CDDeviceInterface/src/PSEmu_Plugin_Defs.h: Removed.

November 1, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * macosx/plugins/PeopsSpu109: Removed.
 * macosx/plugins/DFSound: Added project file and necessary platform-dependant
   files for building existing dfsound sources for Mac OS X.
 * plugins/dfsound/stdafx.h: Made necessary changes for Mac OS X build.
 * plugins/dfsound/spu.c: Likewise.
 * plugins/dfsound/xa.c: Likewise.

October 31, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/cdriso.c: Declare thread controlling variable as volatile.
 * plugins/dfinput/pad.c: Likewise.
 * macosx/plugins/PeopsSpu109: Added SPU plugin for Mac OS X.

October 30, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * data/pcsx.glade2: Do not allow resizing for dialog boxes.
 * plugins/dfsound/spucfg-0.1df/dfsound.glade2: Likewise.
 * plugins/dfxvideo/gpucfg-0.1df/dfxvideo.glade2: Likewise.
 * plugins/dfinput/pad.h: Declare several variables as volatile.
 * plugins/dfinput/Makefile.am: Use $(SDL_CONFIG) instead of "sdl-config".

October 29, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * data/pcsx.glade2: Replaced the "Close" button on many dialog boxes to
   "OK/Cancel" buttons.
 * gui/Gtk2Gui.c: Likewise.
 * plugins/dfsound/spucfg-0.1df/dfsound.glade2: Likewise.
 * plugins/dfsound/spucfg-0.1df/main.c: Likewise.
 * plugins/dfxvideo/gpucfg-0.1df/dfxvideo.glade2: Likewise.
 * plugins/dfxvideo/gpucfg-0.1df/main.c: Likewise.
 * plugins/dfinput/dfinput.glade2: Likewise.
 * plugins/dfinput/cfg-gtk2.c: Likewise.

October 27, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfinput/xkb.c: Use XkbSetDetectableAutoRepeat() instead of